fix: alert card visual improvements (#4297)
- adds spacing at bottom of card to see shadow
- changes width to be seen properly as was cut off on larger acreens
- adds isPresentational for separator in changelog page

--- a/scopes/defender/tester/ui/tests-page.module.scss
+++ b/scopes/defender/tester/ui/tests-page.module.scss
@@ -1,6 +1,6 @@
 .testsPage {
   padding: 50px 40px 100px 40px;
-  width: 100%;
+  width: auto;
   overflow-y: auto;
   max-width: 1440px;
   margin: 0 auto;
